# ES_Tasks

./: README.md
freertos_master_slave/: CMakeLists.txt  DESIGN.docx  FreeRTOSConfig.h  README.md  REQUIREMENTS.docx  SIMULATION_RESULTS.md
freertos_master_slave/scripts/: run_tests.sh
freertos_master_slave/src/: device_a.c  device_a.h  device_b.c  device_b.h  ipc.c  ipc.h  logger.c  logger.h  main.c  sim_config.h
freertos_master_slave/tests/: test_device_a_sm.c  test_device_b_sm.c  test_ipc_types.c
mathdev/: .gitignore  CMakeLists.txt  DESIGN.docx  README.md  REQUIREMENTS.docx  pytest.ini
mathdev/client_c/: client.c  protocol.h
mathdev/client_python/: client.py
mathdev/kernel/: mathdev.c  mathdev.h
mathdev/proto/: protocol.py
mathdev/scripts/: init_git.sh  load_module.sh  run_tests.sh  start_server.sh  unload_module.sh
mathdev/server/: mock_server.py  server.py
mathdev/tests/: conftest.py
mathdev/tests/c/: test_client_proto.c
mathdev/tests/integration/: test_integration.py  test_mock_stack.py
mathdev/tests/kernel/: mathdev_kunit.c
mathdev/tests/unit/: test_protocol.py  test_server.py
